# discord-agent

./: .env.example  CLAUDE.md  agent.py  bot.py  pyproject.toml  query_agent.py  requirements.txt  test_agent.py  test_ollama_direct.py  test_pipeline.py  test_tool.py
baml_client/: __init__.py
baml_client/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: agent.baml  clients.baml  generators.baml  summarize.baml  types.baml
tools/: README.md  __init__.py  bash_command.py  kv_store.py  ollama_models.py  read_file.py  stored_content.py  write_file.py
