[tool.poetry]
name = "discord-agent"
version = "0.1.0"
description = "A Discord bot that relays messages to a Llama AI instance via an agentic loop"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.3.0"
aiohttp = "^3.9.0"
python-dotenv = "^1.0.0"
baml-py = "^0.215.2"
beautifulsoup4 = "^4.12.0"
pydantic = "^2.12.5"
openai-whisper = "^20250625"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
discord-bot = "bot:main"
